Configure OAuth with Cloudflare Workers authenticator

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,8 +8,8 @@ backend:
   name: github
   repo: rationfleet/wellaftersixty
   branch: main
-  # Using Sveltia CMS's free OAuth authenticator
-  base_url: https://sveltia-auth.netlify.app
+  # OAuth authenticator hosted on Cloudflare Workers
+  base_url: https://wellaftersixty-auth.ration-fleet-9l.workers.dev
 
 # Where uploaded images are stored
 media_folder: "public/images"
