Fix trailing slash redirect for /admin

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,16 @@
 {
+    "trailingSlash": true,
     "rewrites": [
-        {
-            "source": "/admin",
-            "destination": "/admin/index.html"
-        },
         {
             "source": "/admin/config.yml",
             "destination": "/admin/config.yml"
+        }
+    ],
+    "redirects": [
+        {
+            "source": "/admin",
+            "destination": "/admin/",
+            "permanent": true
         }
     ]
 }
