Disable local_backend for production CMS

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,8 +1,8 @@
 # Decap CMS Configuration for WellAfterSixty
 # This controls all the content types and fields in your admin panel
 
-# Use local backend for development (no authentication needed)
-local_backend: true
+# Set to false for production - the proxy only runs locally
+local_backend: false
 
 backend:
   name: github
